manifests/workloads/media/overseerr/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: overseerr
  annotations:
    metallb.universe.tf/loadBalancerIPs: 10.0.3.27
spec:
  type: LoadBalancer
  ports:
    - port: 5055
      targetPort: http
      protocol: TCP
      name: http
  selector:
    app.kubernetes.io/name: overseerr
    app.kubernetes.io/instance: overseerr
